--- a/FE/Properties/launchSettings.json
+++ b/FE/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7111;http://localhost:5289",
+      "applicationUrl": "https://localhost:7111",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
