--- a/FE/FE.csproj
+++ b/FE/FE.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\MODELS\MODELS.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\asset\" />
+  </ItemGroup>
+
 </Project>
