--- a/FE/appsettings.Development.json
+++ b/FE/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "BeURL": "https://localhost:7181"
+  "BeURL": "https://localhost:7181",
+  "Google": {
+    "ClientId": "390737928795-uvn08funkvf5en961uo4edr5aauej51e.apps.googleusercontent.com",
+    "ClientSecret": "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"
+  }
 }
