Hoàng Nhi - Update code

--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\MODELS\MODELS.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\Common\" />
+  </ItemGroup>
+
 </Project>
