Hoàng Nhi - Update code

--- a/BE/appsettings.CongNgheMangNangCao.json
+++ b/BE/appsettings.CongNgheMangNangCao.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LinkU": "Data Source=localhost;Initial Catalog=LINKU;User ID=sa;Password=Aa123456.; TrustServerCertificate=True"
+    "LinkU": "Server=db;Database=LINKU;User Id=sa;Password=Aa123456.;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "ee8239eb-44cf-429e-9ee5-e915e7c477ab",
