--- a/FE/appsettings.CongNgheMangNangCao.json
+++ b/FE/appsettings.CongNgheMangNangCao.json
@@ -5,9 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "BeURL": "https://localhost:7181",
+  "BeURL": "http://backend:8080",
+  "ImageURL": "http://localhost:8081",
   "Google": {
     "ClientId": "390737928795-uvn08funkvf5en961uo4edr5aauej51e.apps.googleusercontent.com",
     "ClientSecret": "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"
+  },
+  "DataProtection": {
+    "KeysPath": "/app/data-protection-keys"
   }
 }
