--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3'
 services:
   frontend:
+    build:
+        context: .
+        dockerfile: FE/Dockerfile
     image: hoangnhii211203/linku-frontend:latest
     ports:
       - "8080:8080"
@@ -9,6 +12,9 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=CongNgheMangNangCao
   backend:
+    build:
+      context: .
+      dockerfile: BE/Dockerfile
     image: hoangnhii211203/linku-backend:latest
     ports:
       - "8081:8080"
@@ -17,6 +23,9 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=CongNgheMangNangCao
   db:
+    build:
+        context: .
+        dockerfile: DATABASE/Dockerfile
     image: hoangnhii211203/linku-db:latest
     ports:
       - "1433:1433"
