--- a/MODELS/MODELS.csproj
+++ b/MODELS/MODELS.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MEDIAFILE\Requests\" />
+  </ItemGroup>
+
 </Project>
