--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,6 @@ FodyWeavers.xsd
 /BE/appsettings.Development.json
 /BE/appsettings.json
 /.idea/.idea.LinkU/.idea
+/FE/wwwroot/scss
+/FE/package-lock.json
+/FE/package.json
