--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="MimeTypesMap" Version="1.0.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
