Hoàng Nhi - Deploy lên Heroku

--- a/BE/Properties/launchSettings.json
+++ b/BE/Properties/launchSettings.json
@@ -37,6 +37,17 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7181"
+    },
+    "Container (Dockerfile)": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "ASPNETCORE_ENVIRONMENT": "Release"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "iisSettings": {
