--- a/BE/Dockerfile
+++ b/BE/Dockerfile
@@ -27,4 +27,6 @@ RUN dotnet publish "./BE.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseA
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "BE.dll"]
+ENV ASPNETCORE_ENVIRONMENT=Release
+CMD ASPNETCORE_URLS=http://*:$PORT dotnet BE.dll
+#ENTRYPOINT ["dotnet", "BE.dll"]
