--- a/FE/Properties/launchSettings.json
+++ b/FE/Properties/launchSettings.json
@@ -33,6 +33,17 @@
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7111"
+    },
+    "Container (Dockerfile)": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "ASPNETCORE_ENVIRONMENT": "Release"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "iisSettings": {
