--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -22,6 +22,7 @@
         <PackageReference Include="MimeKit" Version="4.9.0" />
         <PackageReference Include="MimeTypesMap" Version="1.0.9" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
         <PackageReference Include="StackExchange.Redis" Version="2.8.41" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="System.Drawing.Common" Version="9.0.6" />
